syntax = "proto3";

option csharp_namespace = "HospitalClient";
import "Protos/user.proto";
import "google/protobuf/empty.proto";
service Meddstaffer {
	rpc GetList(google.protobuf.Empty) returns (MedstaffListResponse);
}

message MedstaffListResponse {
	repeated MedstaffResponse result = 1;
	bool is_success = 2;
	string message = 3;

}

message MedstaffResponse {
	int32 id = 1;
	string qualification = 2;
	string experience = 3;
	UserResponse user = 4;
}


